--- a/style.css
+++ b/style.css
@@ -42,13 +42,13 @@ body {
     text-align: center;
 }
 
-#notify-action {
+.align-right {
     margin-left: auto;
 }
 
 .item {
     display: flex;
-    gap: 10px;
+    gap: 15px;
     padding: 3%;
     margin-bottom: 15px;
 }
@@ -106,6 +106,7 @@ p {
 
 @media (min-width: 576px) {
     main {
+        position:absolute;
         width: 100vw;
         height: 100vh;
         padding: 4% 0% 5% 0%;
@@ -114,7 +115,7 @@ p {
 
     #container {
         background-color: white;
-        width: 55%;
+        width: 50%;
         margin: auto;
         border-radius: 5px;
         box-shadow: 1px 1px 6px 1px rgba(0, 0, 0, 0.1);
