--- a/style.css
+++ b/style.css
@@ -106,10 +106,10 @@ p {
 
 @media (min-width: 576px) {
     main {
-        position:absolute;
+        position: absolute;
         width: 100vw;
         height: 100vh;
-        padding: 4% 0% 5% 0%;
+        padding-top: 4%;
         background-color: #f7fafd;
     }
 
@@ -118,7 +118,6 @@ p {
         width: 50%;
         margin: auto;
         border-radius: 5px;
-        box-shadow: 1px 1px 6px 1px rgba(0, 0, 0, 0.1);
     }
 
     .item {
